voting-grpc-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-grpc
spec:
  selector:
    matchLabels:
      app: voting-grpc
  template:
    metadata:
      labels:
        app: voting-grpc
    spec:
      containers:
        - name: voting-grpc
          image: frost2203/go-voting-grpc-service:v3
          args:
            - "-addr"
            - "user-grpc.default.svc.cluster.local:50051"
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 50052
