voting-grpc-service/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-grpc
spec:
  selector:
    app: voting-grpc
  ports:
    - port: 50052
      targetPort: 50052
      protocol: TCP
